# Revision-Reconciliation

./: .gitignore  README.md  pyproject.toml
assets/part1/: FAIR.xlsx
assets/part2/: FAIR.xlsx
delta_preservation/: cli.py  types.py
delta_preservation/io/: paths.py  pdf.py  xlsx.py
delta_preservation/reconcile/: anchors.py  classify.py  match.py  normalize.py
delta_preservation/vision/: alignment.py  balloons.py  bbox_utils.py  snippets.py
tests/: test_alignment.py  test_anchor_build.py  test_assignment.py  test_balloons.py  test_classify.py  test_integration_part1.py  test_integration_part2.py  test_match_scoring.py  test_normalize.py  test_pdf_text.py  test_snippets.py  test_xlsx.py
